force-app/main/default/objects/Quotation__c/Quotation__c.object-meta.xml
<CustomObject>
    <description>Storing the cost sheets generated against opportunities. one of this will be used as the final cost sheet for booking as well.</description>
    <label>Quotation</label>
    <nameField>
        <label>Quotation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>