force-app/main/default/objects/Quotation__c/fields/Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Agreement value [Basic + PLC + floor rise+ development charges]</description>
    <label>Agreement Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>