force-app/main/default/objects/Quotation__c/fields/Agreement_Value_D__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Value_D__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Agreement Value post discount</description>
    <label>Agreement Value (D)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>