force-app/main/default/objects/Quotation__c/fields/Agreement_Value_Not_for_brokers__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Value_Not_for_brokers__c</fullName>
    <label>Agreement Value Not for brokers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>