force-app/main/default/objects/Quotation__c/fields/Agreement_Value_ST__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Value_ST__c</fullName>
    <defaultValue>0</defaultValue>
    <description>service tax on agreement value</description>
    <label>Agreement Value ST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>