force-app/main/default/objects/Quotation__c/fields/Agreement_Value_ST_D__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Value_ST_D__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Service Tax on on AV post discount</description>
    <label>Agreement Value ST (D)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>