force-app/main/default/objects/Quotation__c/fields/Allotment_Premium_Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>Allotment_Premium_Agreement_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Allotment Premium (Agreement Value)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>