force-app/main/default/objects/Quotation__c/fields/Allow_booking_without_full_token__c.field-meta.xml
<CustomField>
    <fullName>Allow_booking_without_full_token__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow booking without full token</label>
    <type>Checkbox</type>
</CustomField>