force-app/main/default/objects/Quotation__c/fields/Appartment_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Appartment_Configuration__c</fullName>
    <label>Appartment Configuration</label>
    <length>50</length>
    <type>Text</type>
</CustomField>