force-app/main/default/objects/Quotation__c/fields/Approval_Required_on_Discount__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required_on_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Required on Discount</label>
    <type>Checkbox</type>
</CustomField>