force-app/main/default/objects/Quotation__c/fields/Approved_Standard_Discount_PSF__c.field-meta.xml
<CustomField>
    <fullName>Approved_Standard_Discount_PSF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Project Level Max Approved Discount</description>
    <label>Approved Standard Discount (PSF)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>