force-app/main/default/objects/Quotation__c/fields/Base_Rate_L__c.field-meta.xml
<CustomField>
    <fullName>Base_Rate_L__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Lumpsum Base Rate</description>
    <label>Base Rate (L)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>