force-app/main/default/objects/Quotation__c/fields/Base_Rate_L_D__c.field-meta.xml
<CustomField>
    <fullName>Base_Rate_L_D__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Base client post discount (Lumpsum)</description>
    <label>Base Rate (L D)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>