force-app/main/default/objects/Quotation__c/fields/Base_Rate_PSF__c.field-meta.xml
<CustomField>
    <fullName>Base_Rate_PSF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Base Rate (PSF)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>