force-app/main/default/objects/Quotation__c/fields/Base_Rate_PSF_D__c.field-meta.xml
<CustomField>
    <fullName>Base_Rate_PSF_D__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Client Rate  PSF post discount</description>
    <label>Base Rate (PSF D)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>