force-app/main/default/objects/Quotation__c/fields/Basement_Additional_Amount__c.field-meta.xml
<CustomField>
    <fullName>Basement_Additional_Amount__c</fullName>
    <label>Basement (Additional) Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>