force-app/main/default/objects/Quotation__c/fields/Broker_Agreement_Value_New__c.field-meta.xml
<CustomField>
    <fullName>Broker_Agreement_Value_New__c</fullName>
    <label>Broker Agreement Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>