force-app/main/default/objects/Quotation__c/fields/Brokerage_Agreement_Value__c.field-meta.xml
<CustomField>
    <fullName>Brokerage_Agreement_Value__c</fullName>
    <formula>IF(Discount_Applied__c == true, Agreement_Value_D__c - Agreement_Value_Not_for_brokers__c, Agreement_Value_for_brokers__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Agreement Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>