force-app/main/default/objects/Quotation__c/fields/Carpet_Area__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Area__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Carpet Area(Sq.Mt)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>