force-app/main/default/objects/Quotation__c/fields/Carpet_Area_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Area_Sq_Ft__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Carpet Area (Sq. Ft.)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>