force-app/main/default/objects/Quotation__c/fields/Club_Membership_Charges__c.field-meta.xml
<CustomField>
    <fullName>Club_Membership_Charges__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Club Membership Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>