force-app/main/default/objects/Quotation__c/fields/Club_Membership_ST__c.field-meta.xml
<CustomField>
    <fullName>Club_Membership_ST__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Club Membership Service Tax</description>
    <label>Club Membership ST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>