force-app/main/default/objects/Quotation__c/fields/Common_Area_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Common_Area_Maintenance__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Common Area Maintenance	Charges</description>
    <label>Common Area Maintenance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>