force-app/main/default/objects/Quotation__c/fields/Cost_Sheet_pdf_data__c.field-meta.xml
<CustomField>
    <fullName>Cost_Sheet_pdf_data__c</fullName>
    <label>Cost Sheet pdf data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>