force-app/main/default/objects/Quotation__c/fields/Costsheet_format__c.field-meta.xml
<CustomField>
    <fullName>Costsheet_format__c</fullName>
    <formula>TEXT(Project__r.Costsheet_Format__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costsheet format</label>
    <type>Text</type>
</CustomField>