force-app/main/default/objects/Quotation__c/fields/Current_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Approval_Status__c</fullName>
    <label>Current Approval Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>