force-app/main/default/objects/Quotation__c/fields/Customer_reference_Booked_Unit__c.field-meta.xml
<CustomField>
    <fullName>Customer_reference_Booked_Unit__c</fullName>
    <formula>Opportunity__r.Customer_reference_Booked_Unit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer reference Booked Unit</label>
    <type>Text</type>
</CustomField>