force-app/main/default/objects/Quotation__c/fields/Development_Charges_L__c.field-meta.xml
<CustomField>
    <fullName>Development_Charges_L__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Development Charges (L)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>