force-app/main/default/objects/Quotation__c/fields/Discount_10_PSF__c.field-meta.xml
<CustomField>
    <fullName>Discount_10_PSF__c</fullName>
    <label>Discount 10 (PSF)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>