force-app/main/default/objects/Quotation__c/fields/Discount_10_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_10_Type__c</fullName>
    <label>Discount 10 Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>