force-app/main/default/objects/Quotation__c/fields/Discount_11_L__c.field-meta.xml
<CustomField>
    <fullName>Discount_11_L__c</fullName>
    <label>Discount 11(L)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>