force-app/main/default/objects/Quotation__c/fields/Discount_11_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_11_Type__c</fullName>
    <label>Discount 11 Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>