force-app/main/default/objects/Quotation__c/fields/Discount_1_L__c.field-meta.xml
<CustomField>
    <fullName>Discount_1_L__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Discount 1 (L)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>