force-app/main/default/objects/Quotation__c/fields/Discount_1_PSF__c.field-meta.xml
<CustomField>
    <fullName>Discount_1_PSF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>PSF value of the discount one</description>
    <label>Discount 1 (PSF)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>