force-app/main/default/objects/Quotation__c/fields/Discount_1_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_1_Type__c</fullName>
    <label>Discount 1 Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>