force-app/main/default/objects/Quotation__c/fields/FlatNo__c.field-meta.xml
<CustomField>
    <fullName>FlatNo__c</fullName>
    <label>FlatNo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>