force-app/main/default/objects/Quotation__c/fields/Floor_Rise_PSF__c.field-meta.xml
<CustomField>
    <fullName>Floor_Rise_PSF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Floor Rise (PSF)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>