force-app/main/default/objects/Quotation__c/fields/FloorNo__c.field-meta.xml
<CustomField>
    <fullName>FloorNo__c</fullName>
    <label>FloorNo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>