force-app/main/default/objects/Quotation__c/fields/Grand_Total_D__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_D__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Grand Total post discount</description>
    <label>Grand Total (D)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>