force-app/main/default/objects/Quotation__c/fields/GST_Percentage_Applicable__c.field-meta.xml
<CustomField>
    <fullName>GST_Percentage_Applicable__c</fullName>
    <label>GST Percentage Applicable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>