force-app/main/default/objects/Quotation__c/fields/Increment_Discount_L__c.field-meta.xml
<CustomField>
    <fullName>Increment_Discount_L__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Increment Discount (L)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>