force-app/main/default/objects/Quotation__c/fields/Infrastructure_charges__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure_charges__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Infrastructure charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>