force-app/main/default/objects/Quotation__c/fields/Infrastructure_Charges_ST__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure_Charges_ST__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Infrastructure Charges Service Tax</description>
    <label>Infrastructure Charges ST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>