force-app/main/default/objects/Quotation__c/fields/Is_Special_Brokerage_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Is_Special_Brokerage_Scheme__c</fullName>
    <formula>PaymentPlan__r.Special_Brokerage_Scheme__c</formula>
    <label>Is Special Brokerage Scheme</label>
    <type>Checkbox</type>
</CustomField>