force-app/main/default/objects/Quotation__c/fields/IsModified_Allotment_Charge__c.field-meta.xml
<CustomField>
    <fullName>IsModified_Allotment_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsModified Allotment Charge</label>
    <type>Checkbox</type>
</CustomField>