force-app/main/default/objects/Quotation__c/fields/IsModified_Premium_Rate__c.field-meta.xml
<CustomField>
    <fullName>IsModified_Premium_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsModified Premium Rate</label>
    <type>Checkbox</type>
</CustomField>