force-app/main/default/objects/Quotation__c/fields/Legal_Charges_ST__c.field-meta.xml
<CustomField>
    <fullName>Legal_Charges_ST__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Legal Charges Service Tax</description>
    <label>Legal Charges ST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>