force-app/main/default/objects/Quotation__c/fields/MLCP_Additional_Amount__c.field-meta.xml
<CustomField>
    <fullName>MLCP_Additional_Amount__c</fullName>
    <label>MLCP(Additional) Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>