force-app/main/default/objects/Quotation__c/fields/Modified_Base_Rate__c.field-meta.xml
<CustomField>
    <fullName>Modified_Base_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Modified Base Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>