force-app/main/default/objects/Quotation__c/fields/Modified_NPV__c.field-meta.xml
<CustomField>
    <fullName>Modified_NPV__c</fullName>
    <label>Modified NPV</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>