force-app/main/default/objects/Quotation__c/fields/MSEB_Infrastructure_Development_charge__c.field-meta.xml
<CustomField>
    <fullName>MSEB_Infrastructure_Development_charge__c</fullName>
    <label>MSEB,Infrastructure &amp; Development charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>