force-app/main/default/objects/Quotation__c/fields/MVAT__c.field-meta.xml
<CustomField>
    <fullName>MVAT__c</fullName>
    <defaultValue>0</defaultValue>
    <label>MVAT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>