force-app/main/default/objects/Quotation__c/fields/MVAT_ST__c.field-meta.xml
<CustomField>
    <fullName>MVAT_ST__c</fullName>
    <defaultValue>0</defaultValue>
    <label>MVAT ST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>