force-app/main/default/objects/Quotation__c/fields/No_of_parking__c.field-meta.xml
<CustomField>
    <fullName>No_of_parking__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No of parking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>