force-app/main/default/objects/Quotation__c/fields/NPV_Applied__c.field-meta.xml
<CustomField>
    <fullName>NPV_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NPV Applied</label>
    <type>Checkbox</type>
</CustomField>