force-app/main/default/objects/Quotation__c/fields/NPV_Discount__c.field-meta.xml
<CustomField>
    <fullName>NPV_Discount__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(Original_NPV__c)),
        Original_NPV__c &gt; 0,
        NOT(ISBLANK(Modified_NPV__c))
    ),
    ROUND(((Original_NPV__c - Modified_NPV__c) / Original_NPV__c) * 100 / 100, 2),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPV Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>