force-app/main/default/objects/Quotation__c/fields/NPV_L__c.field-meta.xml
<CustomField>
    <fullName>NPV_L__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NPV (L)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>