force-app/main/default/objects/Quotation__c/fields/NPV_PSF__c.field-meta.xml
<CustomField>
    <fullName>NPV_PSF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>PSF value of the NPV</description>
    <label>NPV (PSF)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>