force-app/main/default/objects/Quotation__c/fields/NPV_Type__c.field-meta.xml
<CustomField>
    <fullName>NPV_Type__c</fullName>
    <description>Actual Text for the NPV discount type</description>
    <label>NPV Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>