force-app/main/default/objects/Quotation__c/fields/Original_Allotment_Charge__c.field-meta.xml
<CustomField>
    <fullName>Original_Allotment_Charge__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Original Allotment Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>