force-app/main/default/objects/Quotation__c/fields/Original_NPV__c.field-meta.xml
<CustomField>
    <fullName>Original_NPV__c</fullName>
    <label>Original NPV</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>