force-app/main/default/objects/Quotation__c/fields/Original_Premium_Rate__c.field-meta.xml
<CustomField>
    <fullName>Original_Premium_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Original Premium Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>