force-app/main/default/objects/Quotation__c/fields/Other_Charges_Category_11__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_Category_11__c</fullName>
    <label>Other Charges Category 11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>