force-app/main/default/objects/Quotation__c/fields/Other_Charges_Desc_10__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_Desc_10__c</fullName>
    <label>Other Charges Desc 10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>