force-app/main/default/objects/Quotation__c/fields/Other_Charges_Desc_12__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_Desc_12__c</fullName>
    <label>Other Charges Desc 12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>