force-app/main/default/objects/Quotation__c/fields/Other_Charges_FCAM__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_FCAM__c</fullName>
    <label>Other Charges FCAM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>