force-app/main/default/objects/Quotation__c/fields/other_Charges_FCAM_Category__c.field-meta.xml
<CustomField>
    <fullName>other_Charges_FCAM_Category__c</fullName>
    <label>Other Charges  Category 17</label>
    <length>15</length>
    <type>Text</type>
</CustomField>