force-app/main/default/objects/Quotation__c/fields/Other_Charges_FCAM_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_FCAM_Description__c</fullName>
    <label>Other Charges  Description 17</label>
    <length>30</length>
    <type>Text</type>
</CustomField>