force-app/main/default/objects/Quotation__c/fields/Other_Charges_ST_12__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_ST_12__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Other Charges ST 12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>