force-app/main/default/objects/Quotation__c/fields/Other_Charges_Total__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Sum total of all charges categorized as other charges [sinking charges]</description>
    <label>Other Charges Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>