force-app/main/default/objects/Quotation__c/fields/Parking_Infra_Charges_ST__c.field-meta.xml
<CustomField>
    <fullName>Parking_Infra_Charges_ST__c</fullName>
    <label>Parking Infra Charges (ST)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>