force-app/main/default/objects/Quotation__c/fields/Parking_Type__c.field-meta.xml
<CustomField>
    <fullName>Parking_Type__c</fullName>
    <label>Parking Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>