force-app/main/default/objects/Quotation__c/fields/Payment_Plan_Modified__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Modified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Plan Modified</label>
    <type>Checkbox</type>
</CustomField>