force-app/main/default/objects/Quotation__c/fields/PaymentPlan__c.field-meta.xml
<CustomField>
    <fullName>PaymentPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Plan</label>
    <referenceTo>Payment_Plan__c</referenceTo>
    <relationshipLabel>Quotations</relationshipLabel>
    <relationshipName>Quotations</relationshipName>
    <type>Lookup</type>
</CustomField>