force-app/main/default/objects/Quotation__c/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <label>Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subvention Plan</fullName>
            </value>
            <value>
                <fullName>Non Subvention Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>