force-app/main/default/objects/Quotation__c/fields/Podium__c.field-meta.xml
<CustomField>
    <fullName>Podium__c</fullName>
    <label>Podium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>