force-app/main/default/objects/Quotation__c/fields/Podium_Amount__c.field-meta.xml
<CustomField>
    <fullName>Podium_Amount__c</fullName>
    <label>Podium Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>