force-app/main/default/objects/Quotation__c/fields/Premium_Charges_1_Lumpsum__c.field-meta.xml
<CustomField>
    <fullName>Premium_Charges_1_Lumpsum__c</fullName>
    <formula>Premium_Charges_Amount_1__c  *  Saleable_Area_Sq_Ft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premium Charges Amount 1 Lumpsum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>