force-app/main/default/objects/Quotation__c/fields/Premium_Charges_Amount_1__c.field-meta.xml
<CustomField>
    <fullName>Premium_Charges_Amount_1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Premium Charges Amount 1</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>